apps/graduation/documentation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documentation-dep
  namespace: graduation-documentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graduation-documentation
  template:
    metadata:
      labels:
        app: graduation-documentation
    spec:
      containers:
        - name: graduation-documentation
          image: ghcr.io/dan9191/graduation-work/docs:5f0826a5b28706cbf21708d7a440d96b65c29d3f
          ports:
            - containerPort: 80
