apps/graduation/documentation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graduation-documentation
  namespace: graduation-documentation
spec:
  selector:
    app: graduation-documentation
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
